# fastregex

./: Cargo.toml  README.md  fastre.pyi  fastregex.pyi  pyproject.toml
.github/workflows/: main.yml
benchmark/: bench.py
examples/: groups.py  match.py  unicodes.py
src/: lib.rs
tests/: test_search.py
